--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  */
+background: blue
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
