--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,14 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @artist.name %>
-</p>
+<h3><%= @artist.name %>'s Songs</h3>
+<ul>
+  <% @artist.songs.each do |song| %>
+    <li><%= song.name %></li>
+  <%end %>
+</ul>
 
 <p>
   <strong>Genre:</strong>
   <%= @artist.genre.try(:name) %>
 </p>
 
-<%= link_to 'Edit', edit_artist_path(@artist) %> |
-<%= link_to 'Back', artists_path %>
+<%= link_to 'Edit', edit_artist_path(@artist), class: 'btn btn-default' %>
+<%= link_to 'Back', artists_path, class: 'btn btn-default' %>
