--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field form-group">
     <%= form.label :name %>
-    <%= form.text_field :name, id: :artist_name, class: 'form-control' %>
+    <%= form.text_field :name, id: :artist_name, class: 'form-control'%>
   </div>
 
   <div class="field form-group">
     <%= form.label :genre_id %>
-    <%= form.collection_select :genre_id, Genre.all, :id, :name, {}, {class: 'form-control'}%>
+    <%= form.collection_select :genre_id, Genre.all, :id, :name, {prompt: 'Select a Genre'}, {class: 'form-control'}%>
     <!-- hard to understand collection_select. this is saying, refer to this stuff we're including in the form as genre_id. Get all instances from Genre class. Sort them by ID, but show me the name associated. -->
   </div>
 
